Fixing some global spacing issues in the body content and the header and the articl-list class

--- a/web/app/themes/envisioningjustice/assets/styles/components/_base.scss
+++ b/web/app/themes/envisioningjustice/assets/styles/components/_base.scss
@@ -148,6 +148,10 @@ p {
     padding: 0;
     background: $gray;
     @include angledEdge(after, $color: $black);
+
+    .section {
+      padding-bottom: 9vw;
+    }
   }
 }
 
